--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,7 +73,7 @@ main {
 	width: 100%;
 	height: 100%;
 	/* What to do with top: -50% and left -50%??? */
-	background: url(./images/PortfolioEditedCutShadow.jpg) no-repeat;
+	background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
 	background-position: 0 -30%;
 	background-attachment: fixed;
 	z-index: -1;
