--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@ $font-header: "Caveat", cursive;
 $font-paragraph: "Quicksand", sans-serif;
 
 $header-color: #e99904;
-$main-color: #aad11c;
+$main-color: rgb(53, 53, 53);
 $content-color: #d1a71c;
 $footer-color: rgb(61, 61, 61);
 $primary-color: #932ce7;
@@ -57,12 +57,13 @@ font-family: "Quicksand", sans-serif; */
 /* font-family: 'Amatic SC', cursive;
 font-family: 'Caveat', cursive; <--- better*/
 body {
+	background-color: $main-color;
 	font-family: $font-main;
 	margin: 0;
 	padding: 0;
 	font-size: 100%;
 	display: grid;
-	grid-template-rows: 6rem min-content auto;
+	grid-template-rows: 5rem min-content auto;
 	grid-template-areas:
 		"header"
 		"main"
@@ -72,7 +73,7 @@ header {
 	position: fixed;
 	z-index: 1;
 	width: 100%;
-	padding: 0.6rem;
+	padding: 0.2rem;
 	font-size: 1.4rem;
 	background-color: $header-color;
 	color: #fff;
@@ -81,21 +82,95 @@ header {
 
 .menu {
 	display: flex;
-	flex-direction: row;
 	list-style: none;
-	align-items: center;
-	justify-content: space-around;
+	flex-direction: column;
+	@include tablet-up() {
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-around;
+	}
+}
+.menu.open .item {
+	display: block;
 }
 .logo h1 {
 	margin: 0;
+	margin-bottom: 1rem;
+	@include tablet-up() {
+		margin: 0;
+	}
 }
 .item {
+	display: none;
 	list-style-type: none;
+	padding: 0.7rem;
 	a {
 		text-decoration: none;
 		color: #fff;
 	}
+	&:hover {
+		color: #666;
+	}
+	@include tablet-up() {
+		display: block;
+		padding: 0;
+	}
 }
+
+.menu-btn {
+	position: absolute;
+	top: 0;
+	right: 4%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 80px;
+	height: 80px;
+	cursor: pointer;
+	transition: all 0.5s ease-in-out;
+	/* border: 3px solid #fff; */
+	@include tablet-up() {
+		display: none;
+	}
+}
+.menu-btn__burger {
+	width: 50px;
+	height: 6px;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+	transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+	content: "";
+	position: absolute;
+	width: 50px;
+	height: 6px;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+	transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before {
+	transform: translateY(-16px);
+}
+.menu-btn__burger::after {
+	transform: translateY(16px);
+}
+/* ANIMATION */
+.menu-btn.open .menu-btn__burger {
+	transform: translateX(-50px);
+	background: transparent;
+	box-shadow: none;
+}
+.menu-btn.open .menu-btn__burger::before {
+	transform: rotate(45deg) translate(35px, -35px);
+}
+.menu-btn.open .menu-btn__burger::after {
+	transform: rotate(-45deg) translate(35px, 35px);
+}
+
 main {
 	grid-area: main;
 	overflow: hidden;
@@ -118,8 +193,11 @@ main {
 	@include phone() {
 		height: 75vh;
 		transform: skew(-50deg);
+
 		&::before {
 			background-position: 46% 50%;
+			// -webkit-box-shadow: 5px 5px 15px 5px #000000;
+			// box-shadow: 5px 5px 15px 5px #000000;
 		}
 	}
 
@@ -131,10 +209,17 @@ main {
 			background-position: 46% 50%;
 		}
 	}
+	@include tablet-up() {
+		height: 70vh;
+		&::before {
+			background-position: 50% 8%;
+		}
+	}
 	@include desktop() {
 		height: 90vh;
 		overflow: hidden;
 		transform: skew(-50deg);
+		// delete skew, alignt to right?
 
 		&::before {
 			background-position: 0 70px;
