--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-@charset "UTF-8";
 *,
 *:after,
 *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* paragraphs */
 /* font-family: "Josefin Sans", sans-serif;
@@ -22,7 +22,8 @@ body {
   font-size: 100%;
   display: grid;
   grid-template-rows: 5rem min-content auto;
-  grid-template-areas: "header" "main" "footer"; }
+  grid-template-areas: "header" "main" "footer";
+}
 
 header {
   position: fixed;
@@ -32,41 +33,53 @@ header {
   font-size: 1.4rem;
   background-color: #e99904;
   color: #fff;
-  grid-area: header; }
+  grid-area: header;
+  -webkit-box-shadow: 6px 5px 21px 1px #000000;
+  box-shadow: 6px 5px 21px 1px #000000;
+}
 
 .menu {
   display: flex;
   list-style: none;
-  flex-direction: column; }
-  @media (min-width: 900px) {
-    .menu {
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-around; } }
+  flex-direction: column;
+}
+@media (min-width: 900px) {
+  .menu {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
 
 .menu.open .item {
-  display: block; }
+  display: block;
+}
+.menu.open .logo {
+  margin-bottom: 1rem;
+}
 
 .logo h1 {
   margin: 0;
-  margin-bottom: 1rem; }
-  @media (min-width: 900px) {
-    .logo h1 {
-      margin: 0; } }
+}
 
 .item {
   display: none;
   list-style-type: none;
-  padding: 0.7rem; }
-  .item a {
-    text-decoration: none;
-    color: #fff; }
-  .item:hover {
-    color: #666; }
-  @media (min-width: 900px) {
-    .item {
-      display: block;
-      padding: 0; } }
+  padding: 1rem;
+}
+.item a {
+  text-decoration: none;
+  color: #fff;
+}
+.item a:hover {
+  color: black;
+}
+@media (min-width: 900px) {
+  .item {
+    display: block;
+    padding: 0;
+  }
+}
 
 .menu-btn {
   position: absolute;
@@ -79,10 +92,13 @@ header {
   height: 80px;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
-  /* border: 3px solid #fff; */ }
-  @media (min-width: 900px) {
-    .menu-btn {
-      display: none; } }
+  /* border: 3px solid #fff; */
+}
+@media (min-width: 900px) {
+  .menu-btn {
+    display: none;
+  }
+}
 
 .menu-btn__burger {
   width: 50px;
@@ -90,10 +106,9 @@ header {
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
-  transition: all 0.5s ease-in-out; }
-
-.menu-btn__burger::before,
-.menu-btn__burger::after {
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before, .menu-btn__burger::after {
   content: "";
   position: absolute;
   width: 50px;
@@ -101,119 +116,156 @@ header {
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
-  transition: all 0.5s ease-in-out; }
-
+  transition: all 0.5s ease-in-out;
+}
 .menu-btn__burger::before {
-  transform: translateY(-16px); }
-
+  transform: translateY(-16px);
+}
 .menu-btn__burger::after {
-  transform: translateY(16px); }
+  transform: translateY(16px);
+}
 
-/* ANIMATION */
 .menu-btn.open .menu-btn__burger {
   transform: translateX(-50px);
   background: transparent;
-  box-shadow: none; }
-
+  box-shadow: none;
+}
 .menu-btn.open .menu-btn__burger::before {
-  transform: rotate(45deg) translate(35px, -35px); }
-
+  transform: rotate(45deg) translate(35px, -35px);
+}
 .menu-btn.open .menu-btn__burger::after {
-  transform: rotate(-45deg) translate(35px, 35px); }
+  transform: rotate(-45deg) translate(35px, 35px);
+}
 
 main {
   grid-area: main;
   overflow: hidden;
-  background-color: #353535; }
+  background-color: #353535;
+}
 
 .main--background-container {
-  position: relative; }
+  position: relative;
+}
+.main--background-container::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
+  z-index: -1;
+  background-size: cover;
+  transform: skew(50deg);
+}
+@media (max-width: 599px) {
+  .main--background-container {
+    height: 75vh;
+    transform: skew(-50deg);
+  }
   .main--background-container::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
-    z-index: -1;
-    background-size: cover;
-    transform: skew(50deg); }
-  @media (max-width: 599px) {
-    .main--background-container {
-      height: 75vh;
-      transform: skew(-50deg); }
-      .main--background-container::before {
-        background-position: 46% 50%; } }
-  @media (min-width: 600px) {
-    .main--background-container {
-      height: 75vh;
-      transform: skew(-50deg); }
-      .main--background-container::before {
-        background-position: 46% 50%; } }
-  @media (min-width: 900px) {
-    .main--background-container {
-      height: 70vh; }
-      .main--background-container::before {
-        background-position: 50% 8%; } }
-  @media (min-width: 1200px) {
-    .main--background-container {
-      height: 90vh;
-      overflow: hidden;
-      transform: skew(-50deg); }
-      .main--background-container::before {
-        background-position: 0 70px;
-        background-attachment: fixed; } }
+    background-position: 46% 50%;
+  }
+}
+@media (min-width: 600px) {
+  .main--background-container {
+    height: 75vh;
+    transform: skew(-50deg);
+  }
+  .main--background-container::before {
+    background-position: 46% 50%;
+  }
+}
+@media (min-width: 900px) {
+  .main--background-container {
+    height: 70vh;
+  }
+  .main--background-container::before {
+    background-position: 50% 8%;
+  }
+}
+@media (min-width: 1200px) {
+  .main--background-container {
+    height: 90vh;
+    overflow: hidden;
+    transform: skew(-50deg);
+  }
+  .main--background-container::before {
+    background-position: 0 70px;
+    background-attachment: fixed;
+  }
+}
 
 .background--content {
-  /* background: url(./images/—Pngtree—blue\ 3d\ paint\ brush\ element_5322257.png);
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	background-size: 70%; */
   position: absolute;
-  bottom: 0;
-  left: 15%;
+  width: 100%;
+  height: 0;
+  left: 0;
+  top: 50%;
   transform: translateY(-50%) skew(50deg);
-  font-size: 50px;
+  font-size: 45px;
   color: #fff;
   text-shadow: 1px 1px 1px #000;
   z-index: 1;
-  text-align: center; }
-  .background--content h2 {
-    font-family: "Caveat", cursive;
-    margin: 0;
-    padding: 20px;
-    position: relative; }
+  text-align: center;
+}
+@media (min-width: 900px) {
+  .background--content {
+    font-size: 50px;
+  }
+}
+.background--content h2 {
+  font-family: "Caveat", cursive;
+  margin: 0;
+  padding: 20px;
+  position: relative;
+}
+.background--content h2:after,
+.background--content h2:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 300px;
+  height: 3px;
+  background: #fff;
+  transform: translateX(-50%);
+}
+@media (min-width: 900px) {
   .background--content h2:after,
-  .background--content h2:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
+.background--content h2:before {
     width: 400px;
-    height: 3px;
-    background: #fff;
-    transform: translateX(-50%); }
-  .background--content h2:before {
-    top: auto;
-    bottom: 0; }
+  }
+}
+.background--content h2:before {
+  top: auto;
+  bottom: 0;
+}
 
 .content {
-  background-color: #d1a71c; }
-  .content article {
-    padding: 2.5rem;
-    min-height: 30vh; }
+  background-color: #d1a71c;
+}
+.content article {
+  padding: 2.5rem;
+  min-height: 30vh;
+}
 
 .content--article__primary {
-  background-color: #932ce7; }
-  .content--article__primary p {
-    color: white;
-    margin: 0; }
+  background-color: #932ce7;
+}
+.content--article__primary p {
+  color: white;
+  margin: 0;
+}
 
 .content--article__secondary {
-  background-color: #e9d204; }
+  background-color: #e9d204;
+}
 
 footer {
   grid-area: footer;
   background-color: #3d3d3d;
   color: #fff;
   padding: 1rem;
-  text-align: center; }
+  text-align: center;
+}
+
+/*# sourceMappingURL=main.css.map */
