--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ header {
   color: #fff;
   grid-area: header;
   -webkit-box-shadow: 6px 5px 21px 1px #000000;
+  -moz-box-shadow: 6px 5px 21px 1px #000000;
   box-shadow: 6px 5px 21px 1px #000000;
 }
 
@@ -59,7 +60,12 @@ header {
 }
 
 .logo h1 {
+  font-size: 3rem;
+  font-family: "Caveat", cursive;
   margin: 0;
+}
+.logo h1 a:hover {
+  color: #000;
 }
 
 .item {
@@ -67,18 +73,19 @@ header {
   list-style-type: none;
   padding: 1rem;
 }
-.item a {
-  text-decoration: none;
-  color: #fff;
-}
 .item a:hover {
-  color: black;
+  color: #000;
 }
 @media (min-width: 900px) {
   .item {
     display: block;
     padding: 0;
   }
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .menu-btn {
@@ -105,7 +112,9 @@ header {
   height: 6px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  -webkit-box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
+  -moz-box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
   transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger::before, .menu-btn__burger::after {
@@ -115,7 +124,9 @@ header {
   height: 6px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  -webkit-box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
+  -moz-box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2) #000;
   transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger::before {
@@ -177,79 +188,65 @@ main {
 @media (min-width: 900px) {
   .main--background-container {
     height: 70vh;
+    overflow: hidden;
+    transform: skew(-35deg);
   }
   .main--background-container::before {
     background-position: 50% 8%;
+    transform: skew(35deg);
   }
 }
 @media (min-width: 1200px) {
   .main--background-container {
-    height: 90vh;
+    height: 80vh;
     overflow: hidden;
-    transform: skew(-50deg);
+    transform: skew(0deg);
   }
   .main--background-container::before {
-    background-position: 0 70px;
+    width: 50%;
+    right: 0;
+    transform: skew(0deg);
+    background-size: contain;
+    background-position: 40vw 8vh;
     background-attachment: fixed;
   }
 }
-
-.background--content {
-  position: absolute;
-  width: 100%;
-  height: 0;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%) skew(50deg);
-  font-size: 45px;
-  color: #fff;
-  text-shadow: 1px 1px 1px #000;
-  z-index: 1;
-  text-align: center;
-}
-@media (min-width: 900px) {
-  .background--content {
-    font-size: 50px;
+@media (min-width: 1800px) {
+  .main--background-container {
+    height: 80vh;
+    overflow: hidden;
+    transform: skew(0deg);
   }
-}
-.background--content h2 {
-  font-family: "Caveat", cursive;
-  margin: 0;
-  padding: 20px;
-  position: relative;
-}
-.background--content h2:after,
-.background--content h2:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 300px;
-  height: 3px;
-  background: #fff;
-  transform: translateX(-50%);
-}
-@media (min-width: 900px) {
-  .background--content h2:after,
-.background--content h2:before {
-    width: 400px;
+  .main--background-container::before {
+    width: 50%;
+    right: 0;
+    transform: skew(0deg);
+    background-size: contain;
+    background-position: 40vw 8vh;
+    background-attachment: fixed;
   }
-}
-.background--content h2:before {
-  top: auto;
-  bottom: 0;
 }
 
 .content {
   background-color: #d1a71c;
 }
 .content article {
+  font-size: 1.2rem;
   padding: 2.5rem;
   min-height: 30vh;
 }
+@media (min-width: 1200px) {
+  .content article:first-child {
+    position: absolute;
+    top: 30%;
+    width: 50%;
+    font-size: 1.5rem;
+    background-color: transparent;
+  }
+}
 
 .content--article__primary {
-  background-color: #932ce7;
+  background-color: #353535;
 }
 .content--article__primary p {
   color: white;
@@ -257,12 +254,12 @@ main {
 }
 
 .content--article__secondary {
-  background-color: #e9d204;
+  background-color: #ffee00;
 }
 
 footer {
   grid-area: footer;
-  background-color: #3d3d3d;
+  background-color: #202020;
   color: #fff;
   padding: 1rem;
   text-align: center;
