--- a/css/main.css
+++ b/css/main.css
@@ -25,18 +25,47 @@ body {
   grid-template-areas: "header" "main" "footer";
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #353535;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 header {
   position: fixed;
   z-index: 1;
   width: 100%;
-  padding: 0.2rem;
+  padding: 0.7rem;
   font-size: 1.4rem;
   background-color: #e99904;
   color: #fff;
   grid-area: header;
-  -webkit-box-shadow: 6px 5px 21px 1px #000000;
-  -moz-box-shadow: 6px 5px 21px 1px #000000;
-  box-shadow: 6px 5px 21px 1px #000000;
+  -webkit-box-shadow: 0px 5px 21px 1px #000000;
+  -moz-box-shadow: 0px 5px 21px 1px #000000;
+  box-shadow: 0px 5px 21px 1px #000000;
+}
+
+.text--primary {
+  color: #ff00b3;
+}
+
+.text--secondary {
+  color: #d9ff00;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .menu {
@@ -55,6 +84,9 @@ header {
 .menu.open .item {
   display: block;
 }
+.menu.open li:nth-child(2) {
+  border-top: 1px solid rgba(0, 0, 0, 0.13);
+}
 .menu.open .logo {
   margin-bottom: 1rem;
 }
@@ -67,8 +99,16 @@ header {
 .logo h1 a:hover {
   color: #000;
 }
+@media (min-width: 900px) {
+  .logo h1 {
+    margin-bottom: 0.8rem;
+  }
+}
 
 .item {
+  /* font-family: "Josefin Sans", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Quicksand", sans-serif; */
   display: none;
   list-style-type: none;
   padding: 1rem;
@@ -91,7 +131,7 @@ a {
 .menu-btn {
   position: absolute;
   top: 0;
-  right: 4%;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -163,49 +203,39 @@ main {
   width: 100%;
   height: 100%;
   background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
-  z-index: -1;
   background-size: cover;
-  transform: skew(50deg);
 }
 @media (max-width: 599px) {
   .main--background-container {
     height: 75vh;
-    transform: skew(-50deg);
   }
   .main--background-container::before {
-    background-position: 46% 50%;
+    clip-path: ellipse(90vw 60vh at 50% 18%);
+    background-position: 48% 50%;
   }
 }
 @media (min-width: 600px) {
   .main--background-container {
-    height: 75vh;
-    transform: skew(-50deg);
+    height: 55vh;
   }
   .main--background-container::before {
+    clip-path: ellipse(90vw 45vh at 50% 18%);
     background-position: 46% 50%;
   }
 }
 @media (min-width: 900px) {
-  .main--background-container {
-    height: 70vh;
-    overflow: hidden;
-    transform: skew(-35deg);
-  }
   .main--background-container::before {
     background-position: 50% 8%;
-    transform: skew(35deg);
   }
 }
 @media (min-width: 1200px) {
   .main--background-container {
     height: 80vh;
-    overflow: hidden;
-    transform: skew(0deg);
   }
   .main--background-container::before {
+    clip-path: circle(50%);
     width: 50%;
     right: 0;
-    transform: skew(0deg);
     background-size: contain;
     background-position: 40vw 8vh;
     background-attachment: fixed;
@@ -214,15 +244,12 @@ main {
 @media (min-width: 1800px) {
   .main--background-container {
     height: 80vh;
-    overflow: hidden;
-    transform: skew(0deg);
   }
   .main--background-container::before {
     width: 50%;
     right: 0;
-    transform: skew(0deg);
     background-size: contain;
-    background-position: 40vw 8vh;
+    background-position: 38vw 8vh;
     background-attachment: fixed;
   }
 }
@@ -232,7 +259,7 @@ main {
 }
 .content article {
   font-size: 1.2rem;
-  padding: 2.5rem;
+  padding: 3rem;
   min-height: 30vh;
 }
 @media (min-width: 1200px) {
@@ -247,9 +274,10 @@ main {
 
 .content--article__primary {
   background-color: #353535;
-}
-.content--article__primary p {
   color: white;
+}
+.content--article__primary p,
+.content--article__primary h2 {
   margin: 0;
 }
 
