--- a/scss/main.scss
+++ b/scss/main.scss
@@ -276,7 +276,7 @@ main {
 		}
 	}
 	@include desktop() {
-		height: 80vh;
+		height: 90vh;
 		&::before {
 			clip-path: circle(50%);
 			width: 50%;
@@ -298,62 +298,12 @@ main {
 		}
 	}
 }
-// TEXT ON IMAGE
-// .background--content {
-// 	// background: url(../images/gray-brush.png);
-// 	// background-repeat: no-repeat;
-// 	// background-position: 50% 50%;
-// 	// background-size: 100%;
-// 	position: absolute;
-// 	width: 100%;
-// 	height: 0;
-// 	left: 0;
-// 	top: 50%;
-// 	transform: translateY(-50%) skew(50deg);
-// 	font-size: 45px;
-// 	color: #fff;
-// 	text-shadow: 1px 1px 1px #000;
-// 	z-index: 1;
-// 	text-align: center;
 
-// 	@include tablet-up() {
-// 		font-size: 50px;
-// 		transform: skew(35deg);
-// 	}
-
-// 	h2 {
-// 		font-family: $font-header;
-// 		margin: 0;
-// 		padding: 20px;
-// 		position: relative;
-// 	}
-// 	h2:after,
-// 	h2:before {
-// 		@include box-shadow(5px, 4px, 15px, 2px, #000);
-// 		content: "";
-// 		position: absolute;
-// 		top: 0;
-// 		left: 50%;
-// 		width: 300px;
-// 		height: 3px;
-// 		background: #fff;
-// 		transform: translateX(-50%);
-
-// 		@include tablet-up() {
-// 			width: 400px;
-// 		}
-// 	}
-// 	h2:before {
-// 		@include box-shadow(5px, -4px, 15px, 2px, #000);
-// 		top: auto;
-// 		bottom: 0;
-// 	}
-// }
 .content {
 	background-color: $content-color;
 	article {
 		font-size: 1.2rem;
-		padding: 3rem;
+		padding: 4rem;
 		min-height: 30vh;
 	}
 	article h3 {
@@ -385,6 +335,27 @@ main {
 .content--article__secondary {
 	clip-path: polygon(0 0%, 100% 7%, 100% 93%, 0% 100%);
 	background-color: $secondary-color;
+}
+
+.card-skill {
+	display: flex;
+	justify-content: center;
+	// Maybe for mobile view?
+	// justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.box-skill {
+	display: flex;
+	flex-direction: column;
+	padding: 1rem;
+	align-items: center;
+	justify-content: space-between;
+
+	svg {
+		width: 90px;
+		height: 90px;
+	}
 }
 
 footer {
