Add containers for skill icons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -308,7 +308,7 @@ main {
 	}
 	article h3 {
 		margin: 0;
-		margin-bottom: 1.5rem;
+		margin-bottom: 2rem;
 		padding: 0;
 		font-size: 6rem;
 		font-family: $font-subheader;
@@ -326,23 +326,49 @@ main {
 .content--article__primary {
 	background-color: $primary-color;
 	color: white;
-
 	p,
 	h2 {
 		margin: 0;
 	}
 }
 .content--article__secondary {
-	clip-path: polygon(0 0%, 100% 7%, 100% 93%, 0% 100%);
+	clip-path: polygon(0 0%, 100% 5%, 100% 95%, 0% 100%);
 	background-color: $secondary-color;
 }
 
 .card-skill {
+	border-radius: 0.5rem;
+	@include box-shadow(-1px, 1px, 10px, 1px, rgba(0, 0, 0, 0.466));
+	background-color: rgba(255, 255, 255, 0.514);
 	display: flex;
-	justify-content: center;
-	// Maybe for mobile view?
-	// justify-content: space-around;
-	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
+	margin: auto;
+	margin-bottom: 5rem;
+	overflow: hidden;
+
+	@include tablet() {
+		padding: 2.5rem;
+	}
+	@include desktop {
+		padding: 3rem;
+		max-width: 60vw;
+	}
+	h4 {
+		width: 50%;
+		border-bottom: 2px solid rgba(0, 0, 0, 0.575);
+		padding: 1rem;
+		text-align: center;
+		font-size: 2rem;
+	}
+	.card-skill__icon {
+		display: flex;
+		justify-content: space-around;
+		width: 100%;
+		// Maybe for mobile view?
+		// justify-content: space-around;
+		flex-wrap: wrap;
+	}
 }
 
 .box-skill {
