--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ main {
 }
 .content article h3 {
   margin: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   padding: 0;
   font-size: 6rem;
   font-family: "Amatic SC", cursive;
@@ -291,13 +291,45 @@ main {
 }
 
 .content--article__secondary {
-  clip-path: polygon(0 0%, 100% 7%, 100% 93%, 0% 100%);
+  clip-path: polygon(0 0%, 100% 5%, 100% 95%, 0% 100%);
   background-color: #ffee00;
 }
 
 .card-skill {
+  border-radius: 0.5rem;
+  -webkit-box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  -moz-box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  background-color: rgba(255, 255, 255, 0.514);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 5rem;
+  overflow: hidden;
+}
+@media (min-width: 600px) {
+  .card-skill {
+    padding: 2.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .card-skill {
+    padding: 3rem;
+    max-width: 60vw;
+  }
+}
+.card-skill h4 {
+  width: 50%;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.575);
+  padding: 1rem;
+  text-align: center;
+  font-size: 2rem;
+}
+.card-skill .card-skill__icon {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
   flex-wrap: wrap;
 }
 
