--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ main {
   padding: 4rem;
   min-height: 30vh;
 }
-.content article h3 {
+.content article h2 {
   margin: 0;
   margin-bottom: 2rem;
   padding: 0;
@@ -286,8 +286,11 @@ main {
   color: white;
 }
 .content--article__primary p,
-.content--article__primary h2 {
+.content--article__primary h3 {
   margin: 0;
+}
+.content--article__primary h3 {
+  font-size: 2.5rem;
 }
 
 .content--article__secondary {
@@ -320,7 +323,7 @@ main {
   }
 }
 .card-skill h4 {
-  width: 50%;
+  width: 100%;
   border-bottom: 2px solid rgba(0, 0, 0, 0.575);
   padding: 1rem;
   text-align: center;
