--- a/scss/main.scss
+++ b/scss/main.scss
@@ -306,7 +306,8 @@ main {
 		padding: 4rem;
 		min-height: 30vh;
 	}
-	article h3 {
+
+	article h2 {
 		margin: 0;
 		margin-bottom: 2rem;
 		padding: 0;
@@ -327,8 +328,11 @@ main {
 	background-color: $primary-color;
 	color: white;
 	p,
-	h2 {
+	h3 {
 		margin: 0;
+	}
+	h3 {
+		font-size: 2.5rem;
 	}
 }
 .content--article__secondary {
@@ -355,7 +359,7 @@ main {
 		max-width: 60vw;
 	}
 	h4 {
-		width: 50%;
+		width: 100%;
 		border-bottom: 2px solid rgba(0, 0, 0, 0.575);
 		padding: 1rem;
 		text-align: center;
