--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ main {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
+  background: url(../resources/images/PortfolioEditedCutShadow.jpg) no-repeat;
   background-size: cover;
 }
 @media (max-width: 599px) {
@@ -343,9 +343,44 @@ main {
   align-items: center;
   justify-content: space-between;
 }
-.box-skill svg {
+.box-skill img {
   width: 90px;
   height: 90px;
+}
+
+.box-contact {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.box-contact img {
+  width: 50px;
+  height: 50px;
+}
+.box-contact .contact-mail {
+  font-size: 2rem;
+  border: 1px solid white;
+  padding: 6rem;
+  border-radius: 50%;
+  transition: 0.4s;
+}
+.box-contact .contact-mail:hover {
+  cursor: pointer;
+  border-radius: 0%;
+}
+.box-contact .contact-links {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.box-contact .contact-links p {
+  padding: 1rem;
+}
+.box-contact .contact-links a {
+  display: flex;
+  align-items: center;
 }
 
 footer {
