--- a/scss/main.scss
+++ b/scss/main.scss
@@ -247,7 +247,7 @@ main {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: url(../images/PortfolioEditedCutShadow.jpg) no-repeat;
+		background: url(../resources/images/PortfolioEditedCutShadow.jpg) no-repeat;
 		background-size: cover;
 	}
 
@@ -382,9 +382,44 @@ main {
 	align-items: center;
 	justify-content: space-between;
 
-	svg {
+	img {
 		width: 90px;
 		height: 90px;
+	}
+}
+
+.box-contact {
+	display: flex;
+	justify-content: space-around;
+	padding: 1rem;
+	align-items: center;
+	flex-wrap: wrap;
+	img {
+		width: 50px;
+		height: 50px;
+	}
+	.contact-mail {
+		font-size: 2rem;
+		border: 1px solid white;
+		padding: 6rem;
+		border-radius: 50%;
+		transition: 0.4s;
+		&:hover {
+			cursor: pointer;
+			border-radius: 0%;
+		}
+	}
+	.contact-links {
+		margin-top: 3rem;
+		display: flex;
+		flex-direction: column;
+		p {
+			padding: 1rem;
+		}
+		a {
+			display: flex;
+			align-items: center;
+		}
 	}
 }
 
